--- a/test/index.html
+++ b/test/index.html
@@ -1,17 +1,17 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <body>
-    <script src="../dist/browser/best-bible.min.js"></script>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Document</title>
+    </head>
+    <body>
+        <script src="../dist/browser/best-bible.min.js"></script>
 
-    <script>
-      document.addEventListener("DOMContentLoaded", () => {
-        console.log(BestBible.getVerse("Genesis", 1, 1));
-      });
-    </script>
-  </body>
+        <script>
+            document.addEventListener("DOMContentLoaded", () => {
+                console.log(BestBible.getVerse("Genesis", 1, 1));
+            });
+        </script>
+    </body>
 </html>
